# claude_code_kanban_template

./: .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.local.md.example  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-engineer.md  data-engineer.md  frontend-engineer.md  infra-devops.md  marketing-strategist.md  ml-engineer.md  product-owner.md  project-manager.md  qa.md  researcher.md  security-auditor.md  tech-lead.md
.claude/commands/: clean.md  fix-issue.md  kickoff.md  sync-framework.md  sync-to-projects.md  sync-to-template.md  wizard.md
.github/workflows/: ci.yml  setup-kanban.yml
docs-site/: conventions.md  index.md  interactions.md  quickstart.md  reference.md
docs-site/agents/: coordination.md  org-chart.md  overview.md  specialists.md
docs-site/architecture/: components.md  overview.md
docs-site/commands/: advance.md  clean.md  deploy.md  fix-issue.md  kickoff.md  overview.md  review-backlog.md  review.md  update-memory.md  wizard.md
docs-site/flow/: discovery.md  execution.md
scripts/: new_repo.py  verify.sh
scripts/templates/: AGENTS.md  CLAUDE.md  README.md  advance.md  kickoff.md
scripts/templates/commands/: advance.md  review-backlog.md
